--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "my-app",
+  "name": "nextjs-typescript-tailwind",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "post-update": "yarn upgrade --latest"
   },
   "dependencies": {
     "@types/node": "20.5.1",
@@ -14,13 +13,18 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "next": "^13.4.19",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.3",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
-    "postcss": "8.4.28",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/node": "14.14.31",
+    "@types/react": "17.0.2",
+    "typescript": "^5.2.2"
   }
 }
