--- a/package.json
+++ b/package.json
@@ -8,23 +8,24 @@
     "post-update": "yarn upgrade --latest"
   },
   "dependencies": {
+    "@next/font": "^13.5.4",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.19",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
-    "typescript": "5.1.6"
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/node": "14.14.31",
-    "@types/react": "17.0.2",
+    "@types/node": "20.5.1",
+    "@types/react": "18.2.20",
     "typescript": "^5.2.2"
   }
 }
